# JoystickGremlin

./: README.md  TRANSLATION_ZH_CN.md  joystick_gremlin.py  joystick_gremlin.spec  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
action_plugins/: AGENTS.md
action_plugins/chain/: ChainAction.qml  __init__.py
gh_page/: interface.md  introduction.md  quickstart.md
gh_page/changelog/: r14_2.md
gremlin/: action_analysis.py  auto_mapper.py  code_runner.py  common.py  config.py  device_initialization.py  event_handler.py  i18n.py  keyboard.py  plugin_manager.py  profile.py  spline.py  swap_devices.py  types.py  util.py  windows_event_hook.py  xbox_output.py
qml/: ActionList.qml  ActionNode.qml  ActionSelector.qml  AxesStateCurrent.qml  ButtonStateSelector.qml  ConfigGroup.qml  DeviceInputList.qml  DeviceList.qml  DeviceTabBar.qml  DialogAbout.qml  DialogAutoMapper.qml  DialogCalibration.qml  DialogDeviceInformation.qml  DialogInputViewer.qml  DialogManageModes.qml  DialogOptions.qml  DialogSwapDevices.qml  ErrorDialog.qml  FloatSpinBox.qml  HintsTooltip.qml  IconButton.qml  InputBehavior.qml  InputButton.qml  InputConfiguration.qml  InputItemBindingConfigurationHeader.qml  InputListener.qml  KeyboardInputList.qml  LogicalDevice.qml  Main.qml  MainFailure.qml  OptionActionSequenceOrdering.qml  OptionProfileAutoLoading.qml  ProfileSettings.qml  ScriptManager.qml  TextInputDialog.qml  TriggerMode.qml  VJoySelector.qml  Xbox360LayoutSelector.qml  helpers.js
translations/: joystick_gremlin_zh_CN.ts
vjoy/: vjoy.py
(+45 files in other folders)
