[tool.poetry]
package-mode = false
name = "JoystickGremlin"
version = "14.0rc1"
description = "A tool for configuring and managing joystick devices."
authors = ["WhiteMagic <white.magic@gmx.de>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://whitemagic.github.io/JoystickGremlin/"
repository = "https://github.com/WhiteMagic/JoystickGremlin"

[tool.poetry.dependencies]
jsonschema = ">=4.25"
miniaudio = ">=1.61"
python = ">=3.13, <3.14"
PySide6 = ">=6.8"
PyInstaller = ">=6.10"
pywin32 = ">=308"
vgamepad = ">=0.1.0"
pytest = ">=9.0"
pytest-qt = ">=4.5.0"
pytest-rerunfailures = ">= 16.0"
ruff = "^0.15.7"
pyright = "^1.1.408"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["ANN"]
lint.ignore = ["ANN401"]

[tool.pyright]
include = ["action_plugins", "dill", "gremlin", "joystick_gremlin.py", "vjoy"]
exclude = ["**/__pycache__", "**/.git", "**/.venv", "**/venv"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Windows"
typeCheckingMode = "basic"
